# portage-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bench-regen.sh  regression-matrix.sh  rust-toolchain.toml
benchmarks/: .gitignore  BENCHMARKS.md  Cargo.toml  MEMORY.md  PROFILES.md  README.md  bench-bdepend-trim.sh  bench-cross-emerge.sh  bench-em-vs-emerge.sh  results.md
benchmarks/.maki/: permissions.toml
benchmarks/benches/: dedup.rs  dep_parsing.rs  realworld_dep_parsing.rs  resolve.rs
benchmarks/docs/: profiling.md
benchmarks/machines/: README.md  mneme.md  thalia.md
benchmarks/results/: cross-stage3-performance.md  cross-stage3a-baseline-2026-06-16.txt  cross-stage3b-2026-06-16.txt  cross-stage3c-idepend-2026-06-16.txt  cross-stage3d-with-bdeps-2026-06-16.txt  cross-stage3e-bdepend-trim-2026-06-16.txt  dep-thalia-5runs-2026-06-14.txt  em-regen-help.txt
benchmarks/scripts/: README.md  bench-eval.sh  bench-sweep.sh  compare-regen.sh  compare-search.sh  maint.sh
benchmarks/src/: main.rs
gentoo-core/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
gentoo-core/.github/workflows/: ci.yml
gentoo-core/examples/: arch.rs
gentoo-core/src/: arch.rs  error.rs  lib.rs  variant.rs
gentoo-interner/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
gentoo-interner/.github/workflows/: ci.yml
gentoo-interner/benches/: interner.rs
gentoo-interner/docs/: profile-analysis.md
gentoo-interner/src/: lib.rs
gentoo-stages/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
gentoo-stages/.github/workflows/: ci.yml
gentoo-stages/examples/: download.rs  list.rs
gentoo-stages/src/: cache.rs  client.rs  error.rs  lib.rs  stage3.rs
portage-atom/: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
portage-atom-pubgrub/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
portage-atom-pubgrub/.github/workflows/: ci.yml
portage-atom-pubgrub/docs/: autounmask-graph-completeness.md  required-use-level-c.md  use-and-solver-boundary.md
portage-atom-pubgrub/examples/: depgraph.rs  resolve.rs  resolve_conflicts.rs
portage-atom-pubgrub/src/: convert.rs  error.rs  graph.rs  lib.rs  package.rs  provider.rs  repository.rs  required_use.rs  solver_impl.rs  use_config.rs  validate.rs  version_set.rs
portage-atom-pubgrub/src/provider/: mod.rs  post_solve.rs  solve.rs  tests.rs
portage-atom-resolvo/: CHANGELOG.md  Cargo.toml  README.md
portage-atom-resolvo/.github/workflows/: ci.yml
portage-atom-resolvo/benches/: parsing.rs
portage-atom-resolvo/examples/: resolve.rs  resolve_conflicts.rs
portage-atom-resolvo/src/: lib.rs  pool.rs  provider.rs  repository.rs  solver_tests.rs  version_match.rs
portage-atom/.github/workflows/: ci.yml
portage-atom/benches/: parsing.rs
portage-atom/examples/: parse_atoms.rs  parse_dep_string.rs
portage-atom/src/: cpn.rs  cpv.rs  dep.rs  dep_entry.rs  error.rs  lib.rs  parsers.rs  pf.rs  slot.rs  use_dep.rs  use_flag_lookup.rs  version.rs
portage-binpkg/: Cargo.toml  README.md
portage-binpkg/examples/: repack.rs
portage-binpkg/src/: error.rs  gpkg.rs  index.rs  lib.rs  maint.rs  regen.rs  scan.rs
portage-binpkg/tests/: write.rs
portage-cli/: Cargo.toml
portage-cli/src/: bdepend_avail.rs  binhost_cache.rs  binpkg.rs  cli.rs  depgraph.rs  dispatch.rs  ebuild.rs  elfscan.rs  emerge.rs  error.rs  lib.rs  main.rs  package_env.rs  pkg.rs  postprocess.rs  preflight.rs  privilege.rs  regen.rs  search.rs  setup.rs  style.rs  use_flags.rs  util.rs  vdb.rs
portage-cli/src/cli/: depgraph_flags.rs  merge_flags.rs
portage-cli/src/crossdev/: config_plan.rs  mod.rs  multilib.rs  stages.rs  target.rs
portage-cli/src/maint/: binhost.rs  binpkg.rs  env.rs  mod.rs  moveinst.rs  regen_use.rs  revisions.rs  sets.rs  world.rs
portage-cli/src/merge/: mod.rs
portage-cli/src/query/: check.rs  depends.rs  has.rs  hasuse.rs  keywords.rs  list.rs  meta.rs  mod.rs  uses.rs  which.rs
portage-cli/src/select/: binutils.rs  clang.rs  compiler.rs  env_d.rs  linker.rs  mirrors.rs  mod.rs  pkgconf.rs  profile.rs  repos.rs
portage-cli/tests/: comparison.rs
portage-distfiles/: Cargo.toml  README.md
portage-distfiles/src/: binhost.rs  binhost_cache.rs  error.rs  fetch.rs  lib.rs  mirrors.rs  resolver.rs
portage-distfiles/tests/: conditional_fetch.rs
portage-metadata/: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
portage-metadata/.github/: FUNDING.yml
portage-metadata/.github/workflows/: ci.yml
portage-metadata/docs/: pms-notes.md
portage-metadata/examples/: parse_cache.rs
portage-metadata/src/: cache.rs  eapi.rs  error.rs  iuse.rs  keyword.rs  lib.rs  license.rs  metadata.rs  phase.rs  required_use.rs  restrict.rs  src_uri.rs
portage-repo/: .gitignore  AGENTS.md  Cargo.toml  README.md  STATUS.md  bench-pk.sh  bench-regen.sh  benchmark.sh  benchmark_baseline.txt  pending.md
portage-repo/.github/workflows/: ci.yml
portage-repo/docs/: benchmarks.md
portage-repo/examples/: compare_caches.rs  ebuild.rs  enumerate_repo.rs  list_profiles.rs  list_use_flags.rs  regen_cache.rs  regen_only.rs  source_ebuild.rs  ver_funcs.rs
portage-repo/src/: cache.rs  error.rs  lib.rs  make_conf.rs  overlay.rs  package_conf.rs  package_env.rs  source.rs
portage-repo/src/repo/: category.rs  ebuild.rs  ini.rs  layout.rs  license_groups.rs  manifest.rs  mod.rs  named_groups.rs  (+9 more)
portage-repo/tests/: brush_compat.rs  ver_functions.rs  ver_functions.sh
portage-resolve/: Cargo.toml  README.md
portage-resolve/src/: bdepend_avail.rs  bdepend_trim.rs  c7.rs  conflicts.rs  depend_trim.rs  download_size.rs  effective_use.rs  force_mask.rs  host_copies.rs  installed.rs  lib.rs  package_use.rs  repo.rs  required_use.rs  root_aware.rs  roots.rs  subslot.rs  use_env.rs
portage-solver/: Cargo.toml  README.md
portage-solver/src/: facts.rs  lib.rs  required_use.rs  solution.rs  solver.rs  use_config.rs
portage-vdb/: Cargo.toml  README.md
portage-vdb/benches/: vdb.rs
portage-vdb/src/: category.rs  collision.rs  contents.rs  error.rs  field_cache.rs  lib.rs  package.rs  vdb.rs  write.rs
(+89 files in other folders)
