[workspace]
resolver = "3"
members = [
    "portage-cli",
    "gentoo-interner",
    "gentoo-core",
    "portage-atom",
    "portage-metadata",
    "portage-atom-pubgrub",
    "portage-atom-resolvo",
    "portage-repo",
    "portage-vdb",
    "gentoo-stages",
    "benchmarks",
]

[profile.release]
opt-level = 3
lto = true

[profile.profiling]
inherits = "release"
debug = 1
lto = false

[patch.crates-io]
gentoo-interner      = { path = "gentoo-interner" }
gentoo-core          = { path = "gentoo-core" }
portage-atom         = { path = "portage-atom" }
portage-metadata     = { path = "portage-metadata" }
portage-atom-pubgrub = { path = "portage-atom-pubgrub" }
portage-atom-resolvo = { path = "portage-atom-resolvo" }
portage-repo         = { path = "portage-repo" }
gentoo-stages        = { path = "gentoo-stages" }
