[workspace]
resolver = "3"
members = [
    "portage-cli",
    "gentoo-interner",
    "gentoo-core",
    "portage-atom",
    "portage-metadata",
    "portage-atom-pubgrub",
    "portage-atom-resolvo",
    "portage-solver",
    "portage-repo",
    "portage-distfiles",
    "portage-vdb",
    "portage-binpkg",
    "gentoo-stages",
    "benchmarks",
]

[workspace.package]
rust-version = "1.95"
repository = "https://github.com/lu-zero/portage-cli"

[workspace.dependencies]
# Workspace members (path + version for publishable crates)
gentoo-interner = { version = "0.3", path = "gentoo-interner" }
gentoo-core = { version = "0.5", path = "gentoo-core" }
gentoo-stages = { version = "0.5", path = "gentoo-stages" }
portage-atom = { version = "0.10", path = "portage-atom" }
portage-metadata = { version = "0.8", path = "portage-metadata" }
portage-solver = { version = "0.1", path = "portage-solver" }
portage-atom-pubgrub = { version = "0.6", path = "portage-atom-pubgrub" }
portage-atom-resolvo = { version = "0.7", path = "portage-atom-resolvo" }
portage-repo = { path = "portage-repo" }
portage-distfiles = { path = "portage-distfiles" }
portage-vdb = { path = "portage-vdb" }
portage-binpkg = { path = "portage-binpkg" }

# Shared external dependencies
anyhow = "1"
bon = "3"
camino = "1"
colorchoice-clap = "1"
cfg-if = "1.0.4"
clap = { version = "4", features = ["derive", "env"] }
criterion = "0.7"
lasso = { version = "0.7", features = ["multi-threaded"] }
mimalloc = "0.1.50"
parking_lot = "0.12"
papaya = "0.2"
pubgrub = "0.4"
resolvo = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
symbol_table = { version = "0.5", features = ["global"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
winnow = { version = "1.0", features = ["ascii"] }
bzip2 = "0.4"
flate2 = "1"
md5 = "0.7"
humansize = "2"
humantime = "2"
rustix = { version = "1", features = ["fs", "process"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
anstream = "1"
anstyle = "1"
blake2 = "0.11.0-rc.5"
boxcar = "0.2"
brush-builtins = { git = "https://github.com/lu-zero/brush.git", rev = "9baec193" }
brush-core = { git = "https://github.com/lu-zero/brush.git", rev = "9baec193" }
brush-parser = { git = "https://github.com/lu-zero/brush.git", rev = "9baec193" }
dhat = "0.3.3"
# Fork: bad-path mknod/chown/chmod pass through to the kernel instead of aborting
# the supervised tree (autoconf probes hit this). PR pending upstream koca-build.
fakeroost = { git = "https://github.com/lu-zero/fakeroost.git", rev = "3f2539f" }
# LD_PRELOAD sibling of fakeroost (same FakerootCommandExt API), for --privilege pseudoroot.
pseudoroot = { git = "https://github.com/lu-zero/pseudoroot.git", tag = "v0.2.1" }
flume = "0.12.0"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hakoniwa = { git = "https://github.com/lu-zero/hakoniwa.git", rev = "5f77bb1" }
object = "0.36"
itertools = "0.14.0"
jwalk = "0.8.1"
ldconfig = "0.1.1"
pkgcraft = { git = "https://github.com/pkgcraft/pkgcraft.git", rev = "b9fb45eb1995a6b9750f21312cda5e95bfbbe1bb" }
regex = "1"
roxmltree = "0.21.1"
sha2 = "0.11"
sha1 = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
version-ranges = "0.1"

[profile.release]
opt-level = 3
lto = true

[profile.profiling]
inherits = "release"
debug = 1
lto = false
