[package]
name = "portage-bench"
version = "0.1.0"
edition = "2024"

[features]
lasso = [
    "portage-atom/lasso",
    "portage-metadata/lasso",
    "portage-atom-pubgrub/lasso",
    "portage-atom-resolvo/lasso",
    "portage-repo/lasso",
]
symbol-table = [
    "portage-atom/symbol-table",
    "portage-metadata/symbol-table",
    "portage-atom-pubgrub/symbol-table",
    "portage-atom-resolvo/symbol-table",
    "portage-repo/symbol-table",
]
mimalloc = ["dep:mimalloc"]
dhat-heap = ["dep:dhat"]

[dependencies]
portage-atom = { workspace = true }
portage-metadata = { workspace = true }
portage-repo = { workspace = true }
portage-atom-pubgrub = { workspace = true }
portage-atom-resolvo = { workspace = true }

pubgrub = { workspace = true }
resolvo = { workspace = true }
pkgcraft = { path = "../../pkgcraft/crates/pkgcraft" }
clap = { workspace = true }
camino = { workspace = true }
mimalloc = { workspace = true, optional = true }
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt"] }

[[bench]]
name = "dep_parsing"
harness = false

[[bench]]
name = "realworld_dep_parsing"
harness = false

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "dedup"
harness = false
