[package]
name = "portage-bench"
version = "0.1.0"
edition = "2024"
# Unpublishable: benchmark-only crate that depends on pkgcraft via git.
publish = false

[features]
lasso = [
    "portage-atom/lasso",
    "portage-metadata/lasso",
    "portage-atom-pubgrub/lasso",
    "portage-atom-resolvo/lasso",
    "portage-repo/lasso",
]
symbol-table = [
    "portage-atom/symbol-table",
    "portage-metadata/symbol-table",
    "portage-atom-pubgrub/symbol-table",
    "portage-atom-resolvo/symbol-table",
    "portage-repo/symbol-table",
]
mimalloc = ["dep:mimalloc"]
dhat-heap = ["dep:dhat"]

[dependencies]
portage-atom = { workspace = true }
portage-metadata = { workspace = true }
portage-repo = { workspace = true }
portage-atom-pubgrub = { workspace = true }
portage-atom-resolvo = { workspace = true }

pubgrub = { workspace = true }
resolvo = { workspace = true }
# Pinned so CI (no sibling pkgcraft worktree) can resolve it; local
# benchmarking overrides this to the worktree via .cargo/config.toml.
pkgcraft = { git = "https://github.com/pkgcraft/pkgcraft.git", rev = "b9fb45eb1995a6b9750f21312cda5e95bfbbe1bb" }
clap = { workspace = true }
camino = { workspace = true }
mimalloc = { workspace = true, optional = true }
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt"] }

[[bench]]
name = "dep_parsing"
harness = false

[[bench]]
name = "realworld_dep_parsing"
harness = false

[[bench]]
name = "resolve"
harness = false

[[bench]]
name = "dedup"
harness = false
