[package]
name = "gentoo-core"
version = "0.5.1"
edition = "2024"
rust-version = "1.88"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Core Gentoo types and utilities for Rust applications"
repository = "https://github.com/lu-zero/gentoo-core"
keywords = ["gentoo", "core", "arch", "target"]
categories = ["development-tools", "os::unix-apis"]

[dependencies]
gentoo-interner = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["interner"]
interner = ["gentoo-interner/interner"]
lasso = ["gentoo-interner/lasso"]
symbol-table = ["gentoo-interner/symbol-table"]
serde = ["dep:serde", "gentoo-interner/serde"]

