[package]
name = "gentoo-core"
version = "0.5.1"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Core Gentoo types and utilities for Rust applications"
keywords = ["gentoo", "core", "arch", "target"]
categories = ["development-tools", "os::unix-apis"]
repository.workspace = true
rust-version.workspace = true

[dependencies]
gentoo-interner = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["interner"]
interner = ["gentoo-interner/interner"]
lasso = ["gentoo-interner/lasso"]
symbol-table = ["gentoo-interner/symbol-table"]
serde = ["dep:serde", "gentoo-interner/serde"]
