[package]
name = "gentoo-interner"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "String interning for Gentoo-related crates"
repository = "https://github.com/lu-zero/gentoo-interner"
keywords = ["gentoo", "interner", "string"]
categories = ["data-structures", "memory-management"]

[dependencies]
papaya = { version = "0.2", optional = true }
boxcar = { version = "0.2", optional = true }
parking_lot = { version = "0.12", optional = true }
lasso = { version = "0.7", features = ["multi-threaded"], optional = true }
symbol_table = { version = "0.5", features = ["global"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
cfg-if = "1.0.4"

[features]
default = ["interner"]
# papaya-backed global interner (default)
interner = ["dep:papaya", "dep:boxcar", "dep:parking_lot"]
# Alternative backends for benchmarking; precedence: lasso > symbol-table
# > interner. Pick one for fair comparison.
lasso = ["dep:lasso"]
symbol-table = ["dep:symbol_table"]


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "interner"
harness = false
