[package]
name = "gentoo-interner"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "String interning for Gentoo-related crates"
repository = "https://github.com/lu-zero/gentoo-interner"
keywords = ["gentoo", "interner", "string"]
categories = ["data-structures", "memory-management"]

[dependencies]
papaya = { workspace = true, optional = true }
boxcar = { version = "0.2", optional = true }
parking_lot = { workspace = true, optional = true }
lasso = { workspace = true, optional = true }
symbol_table = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
cfg-if = { workspace = true }

[features]
default = ["interner"]
# papaya-backed global interner (default)
interner = ["dep:papaya", "dep:boxcar", "dep:parking_lot"]
# Alternative backends for benchmarking; precedence: lasso > symbol-table
# > interner. Pick one for fair comparison.
lasso = ["dep:lasso"]
symbol-table = ["dep:symbol_table"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "interner"
harness = false
