[package]
name = "gentoo-interner"
version = "0.3.1"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "String interning for Gentoo-related crates"
keywords = ["gentoo", "interner", "string"]
rust-version.workspace = true
repository.workspace = true
categories = ["data-structures", "memory-management"]

[dependencies]
papaya = { workspace = true, optional = true }
boxcar = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
lasso = { workspace = true, optional = true }
symbol_table = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
cfg-if = { workspace = true }

[features]
default = ["interner"]
# papaya-backed global interner (default)
interner = ["dep:papaya", "dep:boxcar", "dep:parking_lot"]
# Alternative backends for benchmarking; precedence: lasso > symbol-table
# > interner. Pick one for fair comparison.
lasso = ["dep:lasso"]
symbol-table = ["dep:symbol_table"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "interner"
harness = false
