[package]
name = "gentoo-stages"
version = "0.5.1"
edition = "2021"
rust-version = "1.88.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo stage3 image support"
repository = "https://github.com/lu-zero/gentoo-stages"
keywords = ["gentoo", "stages", "stage3", "cross-compilation"]
categories = ["development-tools"]

[dependencies]
gentoo-core = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
serde = { workspace = true, optional = true }
tempfile = { workspace = true }
reqwest = { version = "0.13", features = ["rustls", "stream"] }
bon = { workspace = true }
tokio = { version = "1.0", features = ["fs", "io-util"] }
futures = "0.3"

[dev-dependencies]
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
lasso = ["gentoo-core/lasso"]
symbol-table = ["gentoo-core/symbol-table"]
serde = ["dep:serde", "gentoo-core/serde"]
