[package]
name = "gentoo-stages"
version = "0.5.1"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo stage3 image support"
keywords = ["gentoo", "stages", "stage3", "cross-compilation"]
rust-version.workspace = true
repository.workspace = true
categories = ["development-tools"]

[dependencies]
gentoo-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
bon = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
futures = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = []
lasso = ["gentoo-core/lasso"]
symbol-table = ["gentoo-core/symbol-table"]
serde = ["dep:serde", "gentoo-core/serde"]
