[package]
name = "portage-atom-pubgrub"
version = "0.6.0"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Bridge between portage-atom and the PubGrub dependency solver"
keywords = ["gentoo", "portage", "pubgrub", "dependency", "solver"]
rust-version.workspace = true
repository.workspace = true
categories = ["algorithms", "development-tools"]

[features]
lasso = ["portage-atom/lasso", "portage-solver/lasso"]
symbol-table = ["portage-atom/symbol-table", "portage-solver/symbol-table"]

[dependencies]
portage-atom = { workspace = true }
portage-solver = { workspace = true }
pubgrub = { workspace = true }
version-ranges = { workspace = true }
thiserror = { workspace = true }
