[package]
name = "portage-atom-resolvo"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Bridge between portage-atom and the resolvo dependency solver"
repository = "https://github.com/lu-zero/portage-atom"

[features]
lasso = ["portage-atom/lasso"]
symbol-table = ["portage-atom/symbol-table"]

[dependencies]
portage-atom = { workspace = true }
resolvo = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parsing"
harness = false
