[package]
name = "portage-atom-resolvo"
version = "0.7.1"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Bridge between portage-atom and the resolvo dependency solver"
keywords = ["gentoo", "portage", "resolvo", "dependency", "solver"]
rust-version.workspace = true
repository.workspace = true
categories = ["algorithms", "development-tools"]

[features]
lasso = ["portage-atom/lasso"]
symbol-table = ["portage-atom/symbol-table"]

[dependencies]
portage-atom = { workspace = true }
resolvo = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parsing"
harness = false
bench = false
