[package]
name = "portage-atom"
version = "0.9.1"
edition = "2024"
rust-version = "1.85"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Lightweight Portage package atom parser based on PMS"
repository = "https://github.com/lu-zero/portage-atom"
keywords = ["gentoo", "portage", "parser", "pms"]
categories = ["parser-implementations", "development-tools"]

[features]
default = ["interner"]
builder = ["dep:bon"]
interner = ["gentoo-interner/interner"]
lasso = ["gentoo-interner/lasso"]
symbol-table = ["gentoo-interner/symbol-table"]

[dependencies]
gentoo-interner = { version = "0.3", path = "../gentoo-interner", default-features = false }
winnow = { workspace = true }
thiserror = { workspace = true }
bon = { workspace = true, optional = true }

[[example]]
name = "parse_atoms"
path = "examples/parse_atoms.rs"

[[example]]
name = "parse_dep_string"
path = "examples/parse_dep_string.rs"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parsing"
harness = false
