[package]
name = "portage-atom"
version = "0.10.0"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Lightweight Portage package atom parser based on PMS"
keywords = ["gentoo", "portage", "parser", "pms"]
rust-version.workspace = true
repository.workspace = true
categories = ["parser-implementations", "development-tools"]

[features]
default = ["interner"]
builder = ["dep:bon"]
interner = ["gentoo-interner/interner"]
lasso = ["gentoo-interner/lasso"]
symbol-table = ["gentoo-interner/symbol-table"]

[dependencies]
gentoo-interner = { workspace = true }
winnow = { workspace = true }
thiserror = { workspace = true }
bon = { workspace = true, optional = true }
smallvec = { workspace = true }

[[example]]
name = "parse_atoms"
path = "examples/parse_atoms.rs"

[[example]]
name = "parse_dep_string"
path = "examples/parse_dep_string.rs"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parsing"
harness = false
