[package]
name = "portage-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo Portage command-line tools (em)"
repository = "https://github.com/lu-zero/portage-cli"
keywords = ["gentoo", "portage", "cli", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "em"
path = "src/main.rs"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
lasso = [
    "portage-atom/lasso",
    "portage-metadata/lasso",
    "portage-atom-pubgrub/lasso",
    "portage-repo/lasso",
]
symbol-table = [
    "portage-atom/symbol-table",
    "portage-metadata/symbol-table",
    "portage-atom-pubgrub/symbol-table",
    "portage-repo/symbol-table",
]

[dependencies]
gentoo-core = { workspace = true }
portage-atom = { workspace = true }
portage-atom-pubgrub = { workspace = true }
portage-metadata = { workspace = true }
portage-repo = { workspace = true }
portage-vdb = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
mimalloc = { workspace = true, optional = true }
