[package]
name = "portage-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo Portage command-line tools (em)"
repository = "https://github.com/lu-zero/portage-cli"
keywords = ["gentoo", "portage", "cli", "package-manager"]
categories = ["command-line-utilities", "development-tools"]
# Unpublishable: depends on portage-repo/portage-distfiles, which pull in the brush fork via git.
publish = false

[[bin]]
name = "em"
path = "src/main.rs"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
lasso = [
    "portage-atom/lasso",
    "portage-metadata/lasso",
    "portage-atom-pubgrub/lasso",
    "portage-repo/lasso",
]
symbol-table = [
    "portage-atom/symbol-table",
    "portage-metadata/symbol-table",
    "portage-atom-pubgrub/symbol-table",
    "portage-repo/symbol-table",
]

[dependencies]
anyhow = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
colorchoice-clap = { workspace = true }
camino = { workspace = true }
ldconfig = { workspace = true }
gentoo-core = { workspace = true }
portage-atom = { workspace = true }
portage-atom-pubgrub = { workspace = true }
portage-metadata = { workspace = true }
portage-repo = { workspace = true }
portage-distfiles = { workspace = true }
portage-vdb = { workspace = true }
portage-binpkg = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }
thiserror = { workspace = true }
mimalloc = { workspace = true, optional = true }
md5 = { workspace = true }
object = { workspace = true }
bzip2 = { workspace = true }
rustix = { workspace = true }
fakeroost = { workspace = true }
hakoniwa = { workspace = true }
humansize = { workspace = true }
humantime = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
