[package]
name = "portage-cli"
version = "0.1.0"
edition = "2024"
# cfg_select! (privilege.rs) stabilized in 1.95.
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo Portage command-line tools (em)"
keywords = ["gentoo", "portage", "cli", "package-manager"]
rust-version.workspace = true
repository.workspace = true
categories = ["command-line-utilities", "development-tools"]
# Unpublishable: depends on portage-repo/portage-distfiles, which pull in the brush fork via git.
publish = false

[lib]
name = "portage_cli"
path = "src/lib.rs"

[[bin]]
name = "em"
path = "src/main.rs"

[features]
default = ["mimalloc", "fakeroost", "pseudoroot", "hakoniwa"]
mimalloc = ["dep:mimalloc"]
# Off by default, investigation-only: swaps in dhat's counting allocator and
# writes dhat-heap.json on exit (view at https://nnethercote.github.io/dh_view/dh_view.html).
dhat-heap = ["dep:dhat"]
fakeroost = ["dep:fakeroost"]
pseudoroot = ["dep:pseudoroot"]
hakoniwa = ["dep:hakoniwa"]
lasso = [
    "portage-atom/lasso",
    "portage-metadata/lasso",
    "portage-atom-pubgrub/lasso",
    "portage-repo/lasso",
]
symbol-table = [
    "portage-atom/symbol-table",
    "portage-metadata/symbol-table",
    "portage-atom-pubgrub/symbol-table",
    "portage-repo/symbol-table",
]

[dependencies]
anyhow = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
colorchoice-clap = { workspace = true }
camino = { workspace = true }
ldconfig = { workspace = true }
gentoo-core = { workspace = true }
portage-atom = { workspace = true }
portage-atom-pubgrub = { workspace = true }
portage-metadata = { workspace = true }
portage-repo = { workspace = true }
portage-resolve = { workspace = true }
portage-distfiles = { workspace = true }
portage-vdb = { workspace = true }
portage-binpkg = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }
thiserror = { workspace = true }
mimalloc = { workspace = true, optional = true }
dhat = { workspace = true, optional = true }
md5 = { workspace = true }
httpdate = { workspace = true }
url = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
object = { workspace = true }
bzip2 = { workspace = true }
rustix = { workspace = true }
humansize = { workspace = true }
humantime = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
fakeroost = { workspace = true, optional = true }
hakoniwa = { workspace = true, optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
pseudoroot = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
