[package]
name = "portage-distfiles"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Distfile fetching and verification for Gentoo Portage"
repository = "https://github.com/lu-zero/portage-cli"
keywords = ["gentoo", "portage", "distfiles", "fetch"]
categories = ["network-programming", "development-tools"]

[dependencies]
portage-metadata = { workspace = true }
portage-repo = { path = "../portage-repo" }
camino = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt", "process", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
blake2 = "0.11.0-rc.5"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
