[package]
name = "portage-distfiles"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Distfile fetching and verification for Gentoo Portage"
repository = "https://github.com/lu-zero/portage-cli"
keywords = ["gentoo", "portage", "distfiles", "fetch"]
categories = ["network-programming", "development-tools"]
# Unpublishable: depends on portage-repo, which pulls in the brush fork via git.
publish = false

[dependencies]
portage-metadata = { workspace = true }
portage-repo = { workspace = true }
camino = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "fs", "io-util"] }
reqwest = { workspace = true }
futures-util = { workspace = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
flate2 = { workspace = true }
# Reused transitively via portage-repo; parsed directly here for distfiles.xml.
roxmltree = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
