[package]
name = "portage-metadata"
version = "0.8.0"
edition = "2024"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo ebuild metadata cache types and parser based on PMS"
keywords = ["gentoo", "portage", "ebuild", "pms", "metadata"]
rust-version.workspace = true
repository.workspace = true
categories = ["parser-implementations", "development-tools"]

[dependencies]
portage-atom = { workspace = true }
winnow = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
lasso = ["portage-atom/lasso"]
symbol-table = ["portage-atom/symbol-table"]

[[example]]
name = "parse_cache"
path = "examples/parse_cache.rs"
