[package]
name = "portage-repo"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo ebuild repository layout reader based on PMS"
repository = "https://github.com/lu-zero/portage-repo"
keywords = ["gentoo", "portage", "repository", "pms"]
categories = ["parser-implementations", "development-tools"]

[features]
dhat-heap = ["dep:dhat"]
mimalloc = ["dep:mimalloc"]
lasso = ["portage-atom/lasso", "portage-metadata/lasso"]
symbol-table = ["portage-atom/symbol-table", "portage-metadata/symbol-table"]

[dependencies]
portage-atom = { workspace = true }
portage-metadata = { workspace = true }
gentoo-core = { workspace = true }
brush-core = { git = "https://github.com/lu-zero/brush.git", branch = "for-portage-repo", features = ["experimental-parser"] }
brush-builtins = { git = "https://github.com/lu-zero/brush.git", branch = "for-portage-repo" }
brush-parser = { git = "https://github.com/lu-zero/brush.git", branch = "for-portage-repo" }
clap = { workspace = true }
tokio = { version = "1", features = ["rt"] }
regex = "1"
thiserror = { workspace = true }
jwalk = "0.8.1"
flume = "0.12.0"
blake2 = "0.11.0-rc.5"
sha2 = "0.11"
hex = "0.4"
roxmltree = "0.21.1"
itertools = "0.14.0"
dhat = { version = "0.3.3", optional = true }
mimalloc = { version = "0.1.50", optional = true }
camino = { workspace = true }
papaya = { workspace = true }
md5 = "0.7"

[dev-dependencies]
libc = "0.2"
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros"] }
