[package]
name = "portage-repo"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Gentoo ebuild repository layout reader based on PMS"
repository = "https://github.com/lu-zero/portage-repo"
keywords = ["gentoo", "portage", "repository", "pms"]
categories = ["parser-implementations", "development-tools"]

[features]
dhat-heap = ["dep:dhat"]
mimalloc = ["dep:mimalloc"]
lasso = ["portage-atom/lasso", "portage-metadata/lasso"]
symbol-table = ["portage-atom/symbol-table", "portage-metadata/symbol-table"]

[dependencies]
portage-atom = { workspace = true }
portage-metadata = { workspace = true }
portage-vdb = { workspace = true }
gentoo-core = { workspace = true }
# Pinned to a fork commit for reproducible CI (we don't commit Cargo.lock);
# bump when intentionally updating brush. Local dev overrides to a worktree
# via .cargo/config.toml.
brush-core = { git = "https://github.com/lu-zero/brush.git", rev = "c76d13eef40d1ce36d1ee6b5556d3af3ebc0be25", features = ["experimental-parser"] }
brush-builtins = { git = "https://github.com/lu-zero/brush.git", rev = "c76d13eef40d1ce36d1ee6b5556d3af3ebc0be25" }
brush-parser = { git = "https://github.com/lu-zero/brush.git", rev = "c76d13eef40d1ce36d1ee6b5556d3af3ebc0be25" }
clap = { workspace = true }
tokio = { version = "1", features = ["rt"] }
regex = "1"
thiserror = { workspace = true }
jwalk = "0.8.1"
flume = "0.12.0"
blake2 = "0.11.0-rc.5"
sha2 = "0.11"
hex = "0.4"
roxmltree = "0.21.1"
itertools = "0.14.0"
dhat = { version = "0.3.3", optional = true }
mimalloc = { version = "0.1.50", optional = true }
camino = { workspace = true }
papaya = { workspace = true }
md5 = "0.7"
winnow = { version = "1", features = ["parser"] }

[dev-dependencies]
libc = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["macros"] }
